--- a/src/About/About.module.css
+++ b/src/About/About.module.css
@@ -1,101 +1,142 @@
 .About {
    position: relative;
     min-height: 100vh;
-    padding-bottom: 2.5em;
-    color: gray;
+    /* background-color: rgb(29, 26, 26); */
 }
-
-
-.About h2 {    
-    font-family: sans-serif;
-    font-weight: 900px;
-    font-size: 50px;
-}
-
-@media (min-width: 1024px) {
 
 .About .Body {
-    display: flex;
-    padding: 0 3%;
-    font-size: 14px;   
-}
-.About .Content {
-    padding: 25px;
-    box-sizing: border-box;
+    font-size: 60px;
+    line-height: 80px;
+    font-family: cursive;
+    font-weight: 400;
+    margin: 3% 7%;
 }
 .Body img {
-     border-radius: 30px;
-     margin-right: 5%;  
-}
-.Body p {
-font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    font-size: 20px;
+    border-radius: 30px;
+    height: 100%;
+    width: 42%;
+    /* position: absolute; */
+    margin:10% 2% 0 ;  
 }
 
-.About .OtherImages {
-    margin: 2%;
+.FirstContent, .SecondContent {
     display: flex;
-    justify-content: space-evenly;
+    margin: 2% 0;
+}
+.FirstContent{
+    flex-direction: row-reverse;
+}
+.SecondContent img{
+    border-radius: 30px;
+    height: 40%;
+    width: 42%;
+    /* position: absolute; */
+    margin:0 2% 0 ;  
 }
 
+
+
+
+@media (max-width: 1024px) {
+    .About {
+        min-height: 110vh ;
+        width: 200%;
+    }
+.About .FirstContent{
+    position: relative;
+}
+.About .FirstContent, .About .SecondContent {
+    width: 140%;
+}
+.About .FirstContent .Content, .SecondContent .Content{
+    margin: 9% 0 1%;
+    line-height: 65px;    
+}
 .About .Content {
+    font-size: 55px;
 
 }
-
+.FirstContent img {
+   
+    width: 1000px;
+}
+.SecondContent img {
+    margin: 10% 1%;
+}
 }
 @media (max-width: 768px) {
-    .Body img {
-        border-radius: 30px;
-        margin: 0 16%;
-   }
-   .About .Body {
-       padding:0 50px ;
-   }
+    .About {
+        min-height: 110vh ;
+        width: 200%;
+    }
+.About .FirstContent{
+    position: relative;
 }
+.About .FirstContent, .About .SecondContent {
+    width: 140%;
+}
+.About .FirstContent .Content, .SecondContent .Content{
+    margin: 9% 0 1%;
+    line-height: 65px;    
+}
+.About .Content {
+    font-size: 45px;
+
+}
+.FirstContent img {
+   
+    width: 1000px;
+}
+.SecondContent img {
+    margin: 10% 1%;
+}
+}
+
 @media (max-width: 414px) {
-
-
-    .About .Body {
-        padding: 2.5em;
-    } 
-
-    p{
-        font-size: 14px;
+    .About {
+        width: 220%;
     }
-
-    h2 {
-        font-size: 30px;
+    
+    .About .FirstContent .Content, .SecondContent .Content{
+        font-size: 45px;
+        line-height: 55px;
+        font-weight: 400;
     }
+    .About .FirstContent,.SecondContent {
+        flex-direction: column;
+        text-align: center;
+    }
+    
+    .FirstContent img, .SecondContent img {
+        margin: 0 1%;
+        border-radius: 10px;
+        width: 97%;
+        height: 900px;
+    }
+}
 
-.Body img {
-    width: 80%;
-    height: 50%;
-    border-radius: 30px;
-    box-shadow: 2px 3px 4px #ccc;
-    margin:0 11%;
-}
-}
 @media (max-width: 375px) {
 
-
-    .About .Body {
-        padding: 2.5em;
-    } 
-
-    p{
-        font-size: 14px;
-    }
-
-    h2 {
-        font-size: 30px;
-    }
-
-.Body img {
-    width: 80%;
-    height: 50%;
-    border-radius: 30px;
-    box-shadow: 2px 3px 4px #ccc;
-    margin:0 11%;
+.About {
+    width: 220%;
 }
+
+.About .FirstContent .Content, .SecondContent .Content{
+    font-size: 45px;
+    line-height: 55px;
+    font-weight: 800;
+}
+.About .FirstContent,.SecondContent {
+    flex-direction: column;
+    text-align: center;
+}
+
+.FirstContent img, .SecondContent img {
+    margin: 0 3%;
+    border-radius: 10px;
+    width: 100%;
+    height: 900px;
+}
+
 }
 
