--- a/src/NavBar/NavBar.module.css
+++ b/src/NavBar/NavBar.module.css
@@ -9,7 +9,7 @@
     padding:5px 5px 15px;
     text-decoration: none;
     /* padding: 5px; */
-    color: black;
+    color: #272421;
 }
 /* end */
 
@@ -33,7 +33,7 @@
 
     .NavBar .Active {
         /* background-color: #e6d8c7; */
-        border-bottom: 1px solid black;
+        border-bottom: 1px dashed #E6D9C8;
         
     }
     .NavBar #SideDrawer {    
